# sortbox

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  labels.yaml  pyproject.toml
.github/: README.md
.github/workflows/: cd.yml  ci.yml
docs/plans/: 2026-01-23-basic-analytics-design.md  2026-01-23-basic-analytics-implementation.md  2026-01-23-label-management-ui-design.md  2026-01-23-label-ui-implementation.md  2026-01-23-orchestrator-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CreateLabelDialog.tsx  EditLabelDialog.tsx  Layout.tsx  RuleEditor.tsx
frontend/src/hooks/: useAnalytics.ts  useLabels.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Labels.tsx  TestConsole.tsx
n8n/: workflow.json
src/: config.py  config_watcher.py  database.py  main.py  models.py
src/api/: __init__.py  analytics.py  labels.py  models.py
src/classifier/: llm_classifier.py  rules.py  service.py
src/classifier/providers/: base.py  claude.py  ollama_provider.py  openai_provider.py
tests/: test_api_analytics.py  test_api_labels.py  test_config.py  test_config_watcher.py  test_database.py  test_integration_main.py  test_integration_ui.py  test_llm_classifier.py  test_models.py  test_rules.py  test_service.py
tests/fixtures/: sample_emails.json
